- upgrade to jdk 24 and 8.0.0